## Version 1.1 ##
## Features/Changes:
 # Added support for reading input files from stdin (as opposed
   to reading them from disk).

 # Added support for irregularly spaced (or arbitrary) ray
   ray launching angles.
   Note that this feature required changes to the input file
   format; version 1.1 will read both input file versions
   transparently, but pre 1.1 versions do not handle the new
   input file version correclty.
 
 # Reduced number of interpolation calls when solving dynamic 
   equations by 50%, thus reducing overall raytracing
   time by ~5%.
 
 
## Bugfixes:
 # Fixed a bug where, when using the Regula Falsi method, the
   number arrivals [ADR] could under some conditions be different
   than the number of eigenrays [ERF].

################################################################
## Version 1.0 ##
## Features/Changes:
 # Replaced the Matlab file output API with a set of self
   written functions (see: https://github.com/EyNuel/matlabOut).
   This eliminates Matlab as a dependency, and makes compilation
   easier;
   
 # Added support for compilation on Microsoft Windows.
 
 # Removed 1D parabolic interpolation as an option for altimetry
   and bathymetry as it leads to innacurate results.
   
 # Renamed variables "rarray" and "zarray" to "arrayR" and
   "arrayZ" respectively

 # When calculating eigenrays or arrivals, more information is
   now provided. Namely: 
    iReturns:   indicates if ray inverted its horizontal direction.
    nSurRefl:   number of surface reflections
    nBotRefl:   number of bottom reflections
    nObjRefl:   number of object reflections
    nRefrac:    number of refraction points
    refrac_z:   z coordinates of refraction points
    refrac_r:   r coordinates of refraction points
    
 # Added "license.txt" to the distribution.

 # Added "manual.pdf" to the distribution.
 
 # Added help output to makefile and ctraceo executable.
 
 # Added pre-compiled binaries for Windows/Linux i686/ia64.
 