@@ -63,7 +63,6 @@ void    solveDynamicEq(settings_t* settings, ray_t* ray){
     double          ri, zi, ci, cii, cxc, sigmaI, crri, czzi, crzi;
     double          crriNext, czziNext, crziNext;   //
     vector_t        slowness     = {0,0};
-    vector_t        slownessNext = {0,0};
     vector_t        gradC   = {0,0};    //gradient of sound speed (c) at current coords
     vector_t        nGradC  = {0,0};    //gradient of sound speed (c) at next coords
     vector_t        dGradC  = {0,0};
@@ -91,7 +90,8 @@ void    solveDynamicEq(settings_t* settings, ray_t* ray){
     //NOTE: these values are saves as "next" so that they can be used correctlyin the first iteration of the loop.
     ri = ray->r[0];
     zi = ray->z[0];
-    csValues(settings, ri, zi, &cii, &cxc, &sigmaI, &gradC.r, &gradC.z, &slownessNext, &crri, &czzi, &crzi);
+    csValues(settings, ri, zi, &cii, &cxc, &sigmaI, &gradC.r, &gradC.z, &slowness, &crri, &czzi, &crzi);
+    (void)slowness;     //TODO: slowness is not used -it should not be calculated
 
     //Solve the Dynamic Equations:
     for(i=0; i<ray->nCoords -2; i++){
@@ -99,8 +99,6 @@ void    solveDynamicEq(settings_t* settings, ray_t* ray){
         //NOTE: in subsequent iterations, the "current" is the former "next", so we'll get the former "next" and use it as "current"
         gradC.r = nGradC.r;
         gradC.z = nGradC.z;
-        slowness.r  = slownessNext.r;
-        slowness.z  = slownessNext.z;
         crri = crriNext;
         czzi = czziNext;
         crzi = crziNext;
@@ -109,12 +107,9 @@ void    solveDynamicEq(settings_t* settings, ray_t* ray){
         //TODO call csvalues directly with ray->xx (i.e.: skip the intermediate variable ri,zi
         ri = ray->r[i+1];
         zi = ray->z[i+1];
-        csValues(settings, ri, zi, &cii, &cxc, &sigmaI, &nGradC.r, &nGradC.z, &slownessNext, &crriNext, &czziNext, &crziNext);
-
-//Q: crri, czzi, crzi are used? Which one is needed further on? "current" or "next"? seems to be "current"
-//R: "current" is used
-
-
+        csValues(settings, ri, zi, &cii, &cxc, &sigmaI, &nGradC.r, &nGradC.z, &slowness, &crriNext, &czziNext, &crziNext);
+        (void)slowness;     //TODO: slowness is not used -it should not be calculated
+        
         dGradC.r = nGradC.r - gradC.r;
         dGradC.z = nGradC.z - gradC.z;
         dr = ray->r[i+1] - ray->r[i];
